fix(quiz-list): update play button link to use the static front URL for quizzes

--- a/views/quizz/quiz-list.hbs
+++ b/views/quizz/quiz-list.hbs
@@ -56,8 +56,8 @@
                                     <circle cx="12" cy="12" r="8" />
                                 </svg>
                             </button>
-                            <a href="{{frontUrl}}/quizz/{{this._id}}" target="_blank" class="action-btn play-btn"
-                                title="Jugar">
+                            <a href="https://quizz-front-alpha.vercel.app/quizz/{{this._id}}" target="_blank"
+                                class="action-btn play-btn" title="Jugar">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M8 5v14l11-7z" />
                                 </svg>
