fix(quiz-list): update play button link to remove 'quizz' from the URL path

--- a/views/quizz/quiz-list.hbs
+++ b/views/quizz/quiz-list.hbs
@@ -56,7 +56,7 @@
                                     <circle cx="12" cy="12" r="8" />
                                 </svg>
                             </button>
-                            <a href="https://quizz-front-alpha.vercel.app/quizz/{{this._id}}" target="_blank"
+                            <a href="https://quizz-front-alpha.vercel.app/{{this._id}}" target="_blank"
                                 class="action-btn play-btn" title="Jugar">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M8 5v14l11-7z" />
