--- a/views/partials/navmenu.hbs
+++ b/views/partials/navmenu.hbs
@@ -24,7 +24,7 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', function () {
-    const lang = localStorage.getItem('lang') || 'en'; // Default to 'en' if not set
+    const lang = localStorage.getItem('lang') || 'es'; // Default to 'en' if not set
 
     // Get all navigation links
     const navLinks = document.querySelectorAll('.nav-link');
