feat: Add aliens story templates and integrate into video generation service

--- a/views/ai-video-generation/video-calendar.hbs
+++ b/views/ai-video-generation/video-calendar.hbs
@@ -373,6 +373,8 @@
                         Básico
                         {{else if (eq type "real")}}
                         Real
+                        {{else if (eq type "aliens")}}
+                        Aliens
                         {{else if (eq type "hidden_files")}}
                         Misterios
                         {{else if (eq type "hidden_beasts")}}
@@ -497,6 +499,7 @@
                     'real': 'Real',
                     'hidden_files': 'Misterios',
                     'hidden_beasts': 'Animales',
+                    'aliens': 'Aliens',
                     'censored': 'Censurado',
                     'first_person': 'Primera Persona'
                 };
